Fix alignment

--- a/assets/_scss/components/_header.scss
+++ b/assets/_scss/components/_header.scss
@@ -3,7 +3,7 @@ header[role="banner"] {
   border: 1px solid $color-base-link;
   padding: {
     bottom: 2rem;
-    top: 2rem;
+    top: 3rem;
   }
   z-index: 1;
   a {
@@ -20,7 +20,6 @@ header[role="banner"] {
     height: 45px;
     line-height: 45px;
     ul {
-      float: right;
       padding-right: 20px;
       display: none;
       li { 
@@ -38,5 +37,9 @@ header[role="banner"] {
     label {
       @include sr-only;
     }
+  }
+  .usa-search-submit,
+  .usa-search-input-small {
+    margin-bottom: 0;
   }
 }
